--- a/index.html
+++ b/index.html
@@ -33,42 +33,23 @@
 	<![endif]-->
 
 
-	<!-- jQuery -->
-	<script src="vendor/jquery/jquery.min.js"></script>
-
-	<!-- Bootstrap Core JavaScript -->
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
-	<!-- Plugin JavaScript -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-	<!-- Contact Form JavaScript -->
-	<script src="js/jqBootstrapValidation.js"></script>
-	<script src="js/contact_me.js"></script>
-
-	<!-- Theme JavaScript -->
-	<script src="js/freelancer.min.js"></script>
-
-	<!-- Custom JavaScript -->
-	<script src="js/scripts.js" type="text/javascript"></script>
-
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/img/favicon//apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/img/favicon//apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon//apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/img/favicon//apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/img/favicon//apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon//apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon//apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon//apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/img/favicon//android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon//favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon//favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon//favicon-16x16.png">
-	<link rel="manifest" href="/img/favicon//manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/img/favicon//ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
 </head>
@@ -109,15 +90,15 @@
 					</li>
 				</ul>
 			</div>
-			<!-- /.navbar-collapse -->l
+			<!-- /.navbar-collapse -->
 		</div>
 		<!-- /.container-fluid -->
 	</nav>
 
 	<!-- Header -->
-	<header>
+	<header class="main-header">
 		<div class="container">
-			<div class="row">
+			<div class="row main-header-row">
 				<div class="col-lg-12">
 					<img class="img-responsive logo" src="img/profile.png" alt="">
 					<div class="intro-text">
@@ -564,6 +545,25 @@
 	</div>
 
 
+
+	<!-- jQuery -->
+	<script src="vendor/jquery/jquery.min.js"></script>
+
+	<!-- Bootstrap Core JavaScript -->
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+	<!-- Plugin JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+	<!-- Contact Form JavaScript -->
+	<script src="js/jqBootstrapValidation.js"></script>
+	<script src="js/contact_me.js"></script>
+
+	<!-- Theme JavaScript -->
+	<script src="js/freelancer.min.js"></script>
+
+	<!-- Custom JavaScript -->
+	<script src="js/scripts.js" type="text/javascript"></script>
 </body>
 
 </html>
