--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<img class="img-responsive logo" src="img/profile.png" alt="">
 					<div class="intro-text">
 						<span class="name">Rachit Agarwal</span>
-						<hr class="star-light">
+						<hr class="hr-custom">
 						<span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
 					</div>
 				</div>
