--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 				<div class="col-lg-12">
 					<img class="img-responsive logo" src="img/profile.png" alt="">
 					<div class="intro-text">
-						<span class="name">Rachit Agarwal</span>
-						<hr class="hr-custom">
-						<span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+						<span class="name name-title">Rachit Agarwal</span>
+						<hr class="main-hr">
+						<span class="skills name-subtitle">Student · Designer · Developer · Lover</span>
 					</div>
 				</div>
 			</div>
