--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
-						<img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+						<img src="img/portfolio/galileo.png" class="img-responsive" alt="">
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
@@ -271,6 +271,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="footer-col col-md-4">
+					<div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 						<h3>Location</h3>
 						<p>3481 Melrose Place
 							<br>Beverly Hills, CA 90210</p>
@@ -333,22 +334,25 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h2>Project Title</h2>
+							<span class="portfolio-title">Galileo</span>
+							<br />
+							<span class="portfolio-subtitle">Web App | Jan. 2017</span>
 							<hr class="star-primary">
-							<img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-							<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+							<img src="img/portfolio/galileo.png" class="img-responsive img-centered" alt="">
+							<p>Built at Daemon Dash 2017.</p>
+							<p>Many University of Maryland students are familiar with VENUS, a website that outputs possible class schedules given certain parameters. We saw various issues with VENUS and wanted to give it an upgrade, so my team and I made Galileo.</p>
+							<p>Galileo is a web app that gives various schedules based on specific classes and customized parameters like morning vs. afternoon classes and no classes on a certain day.</p>
+							<p>I worked on the entire front-end and connecting my teammates' backend algorithms to the Flask app.</p>
 							<ul class="list-inline item-details">
-								<li>Client:
-									<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-									</strong>
+								<li>
+									<a href="https://github.com/rachitag22/galileo" target="_blank">
+										<img class="link-img" src="img/icons/github.png" />
+									</a>
 								</li>
-								<li>Date:
-									<strong><a href="http://startbootstrap.com">April 2014</a>
-									</strong>
-								</li>
-								<li>Service:
-									<strong><a href="http://startbootstrap.com">Web Development</a>
-									</strong>
+								<li>
+									<a href="https://hackstreetboys-galileo.herokuapp.com/" target="_blank">
+										<img class="link-img" src="img/icons/link.png" />
+									</a>
 								</li>
 							</ul>
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
