--- a/index.html
+++ b/index.html
@@ -346,12 +346,13 @@
 							<ul class="list-inline item-details">
 								<li>
 									<a href="https://github.com/rachitag22/galileo" target="_blank">
-										<img class="link-img" src="img/icons/github.png" />
+										<img data-toggle="tooltip" title="GitHub Repo"
+										 class="link-img" src="img/icons/github.png" />
 									</a>
 								</li>
 								<li>
 									<a href="https://hackstreetboys-galileo.herokuapp.com/" target="_blank">
-										<img class="link-img" src="img/icons/link.png" />
+										<img data-toggle="tooltip" title="App Demo" class="link-img" src="img/icons/link.png" />
 									</a>
 								</li>
 							</ul>
