--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 							<br />
 							<span class="portfolio-subtitle">Web App | November 2017</span>
 							<hr class="star-primary">
-							<img src="img/portfolio/galileo.png" class="img-responsive img-centered" alt="">
+							<img src="img/portfolio/phonebuzz.png" class="img-responsive img-centered" alt="">
 							
 							<h4 class="mini-title">Info</h4>
 							<p>As a part of a technical challenge for <a href="http://lendup.com" target="_blank">LendUp</a>, I was tasked with creating a web app that lets users "play" the game <i>FizzBuzz</i> through a phone call.</p>
@@ -491,7 +491,7 @@
 								</li>
 								<li>
 									<a href="https://devpost.com/software/fireberry-pi" target="_blank">
-										<img data-toggle="tooltip" title="DevPost" class="link-img" src="img/icons/devpost.png" />
+										<img data-toggle="tooltip-bottom" title="DevPost" class="link-img" src="img/icons/devpost.png" />
 									</a>
 								</li>
 							</ul>
