--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2>Portfolio</h2>
-					<hr class="star-primary">
+					<hr class="blue-hr">
 				</div>
 			</div>
 			<div class="row">
@@ -168,7 +168,7 @@
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
-						<img src="img/portfolio/safe.png" class="img-responsive" alt="">
+						<img src="img/portfolio/stopbeat.png" class="img-responsive" alt="">
 					</a>
 				</div>
 				<div class="col-sm-4 portfolio-item">
@@ -605,24 +605,38 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h2>Project Title</h2>
+							<h2>StopBeat</h2>
 							<hr class="star-primary">
-							<img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-							<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-							<ul class="list-inline item-details">
-								<li>Client:
-									<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-									</strong>
+							<img src="img/portfolio/stopbeat.png" class="img-responsive img-centered" alt="">
+							<p>I wanted to gain more experience with Android development, and at the same time, needed to take shorter showers, so I built StopBeat. StopBeat is an Android app that lets users specify an elapsed time, and the app will pause their music after that amount of time. At the time, this feature was present in iOS, but not natively on Android.</p>
+							<p>I built the app using Android Studio (Java).</p>
+							<br />
+							
+							<h4 class="mini-title">Links</h4>
+							<ul class="list-inline item-details link-details">
+								<li>
+									<a href="https://github.com/rachitag22/stopbeat" target="_blank">
+										<img data-toggle="tooltip" title="GitHub Repo" class="link-img" src="img/icons/github.png" />
+									</a>
 								</li>
-								<li>Date:
-									<strong><a href="http://startbootstrap.com">April 2014</a>
-									</strong>
-								</li>
-								<li>Service:
-									<strong><a href="http://startbootstrap.com">Web Development</a>
-									</strong>
+								<li>
+									<a href="https://play.google.com/store/apps/details?id=com.rachitagarwal.stopthebeat&hl=en" target="_blank">
+										<img data-toggle="tooltip" title="App Download" class="link-img" src="img/icons/googleplay.png" />
+									</a>
 								</li>
 							</ul>
+							<h4 class="mini-title">Stack</h4>
+							<ul class="list-inline item-details stack-details">
+								<li>
+									<img data-toggle="tooltip" title="Android"
+										 class="link-img" src="img/icons/android.png" />
+								</li>
+								<li>
+									<img data-toggle="tooltip" title="Java"
+										 class="link-img" src="img/icons/java.png" />
+								</li>
+							</ul>
+							
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
 						</div>
 					</div>
