--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								<i class="fa fa-search-plus fa-3x"></i>
 							</div>
 						</div>
-						<img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+						<img src="img/portfolio/funpop.png" class="img-responsive" alt="">
 					</a>
 				</div>
 			</div>
@@ -658,7 +658,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -670,24 +670,34 @@
 				<div class="row">
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
-							<h2>Project Title</h2>
+							<span class="portfolio-title">FunPop</span>
+							<br />
+							<span class="portfolio-subtitle">iOS Game | June 2016</span>
 							<hr class="star-primary">
-							<img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-							<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-							<ul class="list-inline item-details">
-								<li>Client:
-									<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-									</strong>
-								</li>
-								<li>Date:
-									<strong><a href="http://startbootstrap.com">April 2014</a>
-									</strong>
-								</li>
-								<li>Service:
-									<strong><a href="http://startbootstrap.com">Web Development</a>
-									</strong>
+							<img src="img/portfolio/funpop.png" class="img-responsive img-centered" alt="">
+							<p>I was brought onto the FunPop team to work on creative marketing and development for the game. I made various graphics and upgrades to the iOS apps (Standard and Plus) with no prior iOS experience.</p>
+							<br />
+							
+							<h4 class="mini-title">Links</h4>
+							<ul class="list-inline item-details link-details">
+								<li>
+									<a href="https://itunes.apple.com/us/app/funpop-burst-floating-soap/id993478732?mt=8" target="_blank">
+										<img data-toggle="tooltip" title="App Download" class="link-img" src="img/icons/appstore.png" />
+									</a>
 								</li>
 							</ul>
+							<h4 class="mini-title">Stack</h4>
+							<ul class="list-inline item-details stack-details">
+								<li>
+									<img data-toggle="tooltip" title="iOS"
+										 class="link-img" src="img/icons/ios.png" />
+								</li>
+								<li>
+									<img data-toggle="tooltip" title="Objective-C"
+										 class="link-img" src="img/icons/objectivec.png" />
+								</li>
+							</ul>
+							
 							<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
 						</div>
 					</div>
