--- a/index.html
+++ b/index.html
@@ -170,11 +170,12 @@
 		</section>
 		<!-- Experience Section -->
 		<section class="success" id="experience">
+            <div class="container">
 			<div class="row">
-				<div class="col-lg-12 text-center">
+				<!--<div class="col-lg-12 text-center">
 					<h2 class="h2-white">Experience</h2>
 					<hr class="light-hr">
-				</div>
+				</div>-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<div class="row">
 						<div class="col-xs-3">
@@ -260,9 +261,11 @@
 					<br /><br />
 				</div>
 			</div>
+            </div>
 		</section>
 		<!-- Education Section -->
 		<section class="success" id="education">
+            <div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="h2-blue">Education</h2>
@@ -308,27 +311,27 @@
 					<br /><br />
 				</div>
 			</div>
+            </div>
 		</section>
 		
 		<!-- About Section -->
 		<section class="success" id="about">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="h2-white">About</h2>
-					<hr class="light-hr">
-				</div>
+            <div class="container">
+                <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="h2-white">About</h2>
+                    <hr class="light-hr">
+                </div>
 				<div class="col-lg-6 col-lg-offset-3">
-					<div class="row">
-							<span class="about-content">
-								<p>Hey! I'm Rachit!</p>
-								<p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy building apps, designing things, reading about philosophy, and college-related activities.</p>
-								<p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, telepathy, or any other medium.</p>
-								<p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
-							</span>
-						</div>
-					</div>
-					<br /><br />
-					<br /><br />
+                    <span class="about-content">
+                        <p>Hey! I'm Rachit!</p>
+                        <p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy building apps, designing things, reading about philosophy, and college-related activities.</p>
+                        <p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, telepathy, or any other medium.</p>
+                        <p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
+                    </span>
+                </div>
+                <br /><br />
+                <br /><br />
 				</div>
 			</div>
 		</section>
@@ -338,10 +341,10 @@
 			<div class="footer-above">
 				<div class="container">
 					<div class="row">
-						<div class="footer-col col-md-4">
+						<div class="footer-col col-md-3">
 
 						</div>
-						<div class="footer-col col-md-4">
+						<div class="footer-col col-md-6">
 							<h3>Hit Me Up</h3>
 							<ul class="list-inline">
 								<li>
@@ -362,6 +365,9 @@
 							</ul>
 						</div>
 					
+						<div class="footer-col col-md-3">
+
+						</div>
 					</div>
 				</div>
 			</div>
