--- a/index.html
+++ b/index.html
@@ -315,8 +315,7 @@
 		</section>
 		
 		<!-- About Section -->
-		<section class="success" id="about">
-            <div class="container">
+		<section class="success container" id="about">
                 <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="h2-white">About</h2>
@@ -333,7 +332,6 @@
                 <br /><br />
                 <br /><br />
 				</div>
-			</div>
 		</section>
 
 		<!-- Footer -->
