--- a/index.html
+++ b/index.html
@@ -169,176 +169,178 @@
 			</div>
 		</section>
 		<!-- Experience Section -->
-		<section class="success container" id="experience">
-			<div class="row">
-				<!--<div class="col-lg-12 text-center">
-					<h2 class="h2-white">Experience</h2>
-					<hr class="light-hr">
-				</div>-->
-				<div class="col-lg-6 col-lg-offset-3">
-					<div class="row">
-						<div class="col-xs-3">
-							<a href="http://lendup.com"><img class="experience-img" src="img/experience/lendup.png" target="_blank"/></a>
-						</div>
-						<div class="col-xs-9">
-							<span class="experience-header">
-								<span class="experience-company">LendUp</span>
-								<span class="experience-separator"> | </span>
-								<span class="experience-title">Software Engineering Intern</span>
-								<br />
-								<span class="experience-period">
-									<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;San Francisco, CA
-									<span>&nbsp;&nbsp;</span>
-									<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer 2017
+		<section class="success" id="experience">
+			<div class="container">
+				<div class="row">
+					<!--<div class="col-lg-12 text-center">
+							<h2 class="h2-white">Experience</h2>
+							<hr class="light-hr">
+					</div>-->
+					<div class="col-lg-6 col-lg-offset-3">
+						<div class="row">
+							<div class="col-xs-3">
+								<a href="http://lendup.com"><img class="experience-img" src="img/experience/lendup.png" target="_blank"/></a>
+							</div>
+							<div class="col-xs-9">
+								<span class="experience-header">
+									<span class="experience-company">LendUp</span>
+									<span class="experience-separator"> | </span>
+									<span class="experience-title">Software Engineering Intern</span>
+									<br />
+									<span class="experience-period">
+										<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;San Francisco, CA
+										<span>&nbsp;&nbsp;</span>
+										<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer 2017
+									</span>
 								</span>
-							</span>
-							<br /><br />
-							<span class="experience-content">
-								<p>Will be interning at a financial technology startup in San Francisco, doing Android development and back-end work.</p>
-							</span>
-						</div>
-					</div>
-					<br /><br />
-					<div class="row">
-						<div class="col-xs-3">
-							<a href="http://bookholders.com"><img class="experience-img" src="img/experience/bookholders.png" target="_blank"/></a>
-						</div>
-						<div class="col-xs-9">
-							<span class="experience-header">
-								<span class="experience-company">BookHolders</span>
-								<span class="experience-separator"> | </span>
-								<span class="experience-title">Software Engineering Intern</span>
-								<br />
-								<span class="experience-period">
-									<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;College Park, MD
-									<span>&nbsp;&nbsp;</span>
-									<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer 2016 / Winter 2017
+								<br /><br />
+								<span class="experience-content">
+									<p>Will be interning at a financial technology startup in San Francisco, doing Android development and back-end work.</p>
 								</span>
-							</span>
-							<br /><br />
-							<span class="experience-content">
-								<p>Performed upgrades on both front-end and back-end technologies:</p>
-								<ul class="experience-list">
-									<li>Wrote + optimized Python (Selenium server) code using XML templates to autonomously find and purchase books with the best available prices and conditions</li>
-									<li>Performed major upgrades (integration with Flask backend, UI/UX overhaul) to internal Android app</li>
-									<li>Upgraded 3-D CSS/JS styling on store website</li>
-									<li>Designed and developed user dashboard by integrating React.js with Flask backend</li>
-									<li>Wrote barcode generation algorithms and code to dynamically print USPS labels (ASP./NET/VB)</li>
-									<li>Scraped websites and order emails to return clean data (Selenium server, Python regular expressions)</li>
-								</ul>
-							</span>
+							</div>
 						</div>
-					</div>
-					<br /><br />
-					<div class="row">
-						<div class="col-xs-3">
-							<a href="http://navsea.navy.mil"><img class="experience-img" src="img/experience/navsea.png" target="_blank"/></a>
-						</div>
-						<div class="col-xs-9">
-							<span class="experience-header">
-								<span class="experience-company">Naval Sea Systems Command</span>
-								<span class="experience-separator"> | </span>
-								<span class="experience-title">Engineering Intern</span>
-								<br />
-								<span class="experience-period">
-									<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Bethesda, MD
-									<span>&nbsp;&nbsp;</span>
-									<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer 2015
+						<br /><br />
+						<div class="row">
+							<div class="col-xs-3">
+								<a href="http://bookholders.com"><img class="experience-img" src="img/experience/bookholders.png" target="_blank"/></a>
+							</div>
+							<div class="col-xs-9">
+								<span class="experience-header">
+									<span class="experience-company">BookHolders</span>
+									<span class="experience-separator"> | </span>
+									<span class="experience-title">Software Engineering Intern</span>
+									<br />
+									<span class="experience-period">
+										<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;College Park, MD
+										<span>&nbsp;&nbsp;</span>
+										<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer 2016 / Winter 2017
+									</span>
 								</span>
-							</span>
-							<br /><br />
-							<span class="experience-content">
-								<p>Worked on a summer-long project for a ground-breaking submarine concept:</p>
-								<ul class="experience-list">
-									<li>Completed extensive 3-D modeling on brand-new submarine</li>
-									<li>Presented models to division’s upper management</li>
-									<li>Featured in Wavelets magazine for innovative efforts</li>
-								</ul>
-							</span>
+								<br /><br />
+								<span class="experience-content">
+									<p>Performed upgrades on both front-end and back-end technologies:</p>
+									<ul class="experience-list">
+										<li>Wrote + optimized Python (Selenium server) code using XML templates to autonomously find and purchase books with the best available prices and conditions</li>
+										<li>Performed major upgrades (integration with Flask backend, UI/UX overhaul) to internal Android app</li>
+										<li>Upgraded 3-D CSS/JS styling on store website</li>
+										<li>Designed and developed user dashboard by integrating React.js with Flask backend</li>
+										<li>Wrote barcode generation algorithms and code to dynamically print USPS labels (ASP./NET/VB)</li>
+										<li>Scraped websites and order emails to return clean data (Selenium server, Python regular expressions)</li>
+									</ul>
+								</span>
+							</div>
 						</div>
+						<br /><br />
+						<div class="row">
+							<div class="col-xs-3">
+								<a href="http://navsea.navy.mil"><img class="experience-img" src="img/experience/navsea.png" target="_blank"/></a>
+							</div>
+							<div class="col-xs-9">
+								<span class="experience-header">
+									<span class="experience-company">Naval Sea Systems Command</span>
+									<span class="experience-separator"> | </span>
+									<span class="experience-title">Engineering Intern</span>
+									<br />
+									<span class="experience-period">
+										<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;Bethesda, MD
+										<span>&nbsp;&nbsp;</span>
+										<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer 2015
+									</span>
+								</span>
+								<br /><br />
+								<span class="experience-content">
+									<p>Worked on a summer-long project for a ground-breaking submarine concept:</p>
+									<ul class="experience-list">
+										<li>Completed extensive 3-D modeling on brand-new submarine</li>
+										<li>Presented models to division’s upper management</li>
+										<li>Featured in Wavelets magazine for innovative efforts</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+						<br /><br />
 					</div>
-					<br /><br />
 				</div>
 			</div>
 		</section>
 		<!-- Education Section -->
 		<section class="success" id="education">
-            <div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="h2-blue">Education</h2>
-					<hr class="blue-hr">
-				</div>
-				<div class="col-lg-6 col-lg-offset-3">
-					<div class="row">
-						<div class="col-xs-3">
-							<a href="http://umd.edu"><img class="experience-img" src="img/education/umd.png" target="_blank"/></a>
-						</div>
-						<div class="col-xs-9">
-							<span class="experience-header">
-								<span class="experience-company">University of Maryland, College Park</span>
-								<br />
-								<span class="experience-period">
-									<i class="fa fa-pencil" aria-hidden="true"></i>&nbsp;B.S. Computer Science
-									<span>&nbsp;&nbsp;</span>
-									<i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;2020
-								</span>
-							</span>
-							<br /><br />
-							<span class="experience-content">
-								<ul class="experience-list">
-									<li>
-										Honors College
-										<span class="education-separator"> | </span>
-										Design, Cultures, and Creativity (DCC)
-									</li>
-									<li>
-										Awards
-										<span class="education-separator"> | </span>
-										Presidential Scholarship + Dean's List
-									</li>
-									<li>
-										Minors
-										<span class="education-separator"> | </span>
-										Business Analytics + Technology Entrepreneurship
-									</li>
-								</ul>
-							</span>
-						</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<h2 class="h2-blue">Education</h2>
+						<hr class="blue-hr">
 					</div>
-					<br /><br />
+					<div class="col-lg-6 col-lg-offset-3">
+						<div class="row">
+							<div class="col-xs-3">
+								<a href="http://umd.edu"><img class="experience-img" src="img/education/umd.png" target="_blank"/></a>
+							</div>
+							<div class="col-xs-9">
+								<span class="experience-header">
+									<span class="experience-company">University of Maryland, College Park</span>
+									<br />
+									<span class="experience-period">
+										<i class="fa fa-pencil" aria-hidden="true"></i>&nbsp;B.S. Computer Science
+										<span>&nbsp;&nbsp;</span>
+										<i class="fa fa-graduation-cap" aria-hidden="true"></i>&nbsp;2020
+									</span>
+								</span>
+								<br /><br />
+								<span class="experience-content">
+									<ul class="experience-list">
+										<li>
+											Honors College
+											<span class="education-separator"> | </span>
+											Design, Cultures, and Creativity (DCC)
+										</li>
+										<li>
+											Awards
+											<span class="education-separator"> | </span>
+											Presidential Scholarship + Dean's List
+										</li>
+										<li>
+											Minors
+											<span class="education-separator"> | </span>
+											Business Analytics + Technology Entrepreneurship
+										</li>
+									</ul>
+								</span>
+							</div>
+						</div>
+						<br /><br />
+					</div>
 				</div>
 			</div>
-            </div>
 		</section>
 		
 		<!-- About Section -->
-		<section class="success container" id="about">
-                <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="h2-white">About</h2>
-                    <hr class="light-hr">
-                </div>
-				<div class="col-lg-6 col-lg-offset-3">
-                    <span class="about-content">
-                        <p>Hey! I'm Rachit!</p>
-                        <p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy building apps, designing things, reading about philosophy, and college-related activities.</p>
-                        <p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, telepathy, or any other medium.</p>
-                        <p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
-                    </span>
-                </div>
-                <br /><br />
-                <br /><br />
+		<section class="success" id="about">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<h2 class="h2-white">About</h2>
+						<hr class="light-hr">
+					</div>
+					<div class="col-lg-6 col-lg-offset-3">
+						<span class="about-content">
+							<p>Hey! I'm Rachit!</p>
+							<p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy building apps, designing things, reading about philosophy, and college-related activities.</p>
+							<p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, telepathy, or any other medium.</p>
+							<p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
+						</span>
+					</div>
+					<br /><br />
+					<br /><br />
 				</div>
+			</div>
 		</section>
-
 		<!-- Footer -->
 		<footer class="text-center" id="#contact">
 			<div class="footer-above">
 				<div class="container">
 					<div class="row">
 						<div class="footer-col col-md-3">
-
 						</div>
 						<div class="footer-col col-md-6">
 							<h3>Hit Me Up</h3>
@@ -360,9 +362,8 @@
 								</li>
 							</ul>
 						</div>
-					
+						
 						<div class="footer-col col-md-3">
-
 						</div>
 					</div>
 				</div>
