--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
 		<section class="success" id="experience">
 			<div class="container">
 				<div class="row">
-					<!--<div class="col-lg-12 text-center">
-							<h2 class="h2-white">Experience</h2>
-							<hr class="light-hr">
-					</div>-->
+					<div class="col-lg-12 text-center">
+						<h2 class="h2-white">Experience</h2>
+						<hr class="light-hr">
+					</div>
 					<div class="col-lg-6 col-lg-offset-3">
 						<div class="row">
 							<div class="col-xs-3">
-								<a href="http://lendup.com"><img class="experience-img" src="img/experience/lendup.png" target="_blank"/></a>
+								<a href="http://lendup.com"><img class="experience-img" src="img/experience/jpg/lendup.jpg" target="_blank"/></a>
 							</div>
 							<div class="col-xs-9">
 								<span class="experience-header">
@@ -202,7 +202,7 @@
 						<br /><br />
 						<div class="row">
 							<div class="col-xs-3">
-								<a href="http://bookholders.com"><img class="experience-img" src="img/experience/bookholders.png" target="_blank"/></a>
+								<a href="http://bookholders.com"><img class="experience-img" src="img/experience/jpg/bookholders.jpg" target="_blank"/></a>
 							</div>
 							<div class="col-xs-9">
 								<span class="experience-header">
@@ -233,7 +233,7 @@
 						<br /><br />
 						<div class="row">
 							<div class="col-xs-3">
-								<a href="http://navsea.navy.mil"><img class="experience-img" src="img/experience/navsea.png" target="_blank"/></a>
+								<a href="http://navsea.navy.mil"><img class="experience-img" src="img/experience/jpg/navsea.jpg" target="_blank"/></a>
 							</div>
 							<div class="col-xs-9">
 								<span class="experience-header">
