--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 					<div class="col-lg-6 col-lg-offset-3">
 						<span class="about-content">
 							<p>Hey! I'm Rachit!</p>
-							<p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy building apps, designing things, reading about philosophy, and college-related activities.</p>
+							<p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy building apps, designing things, reading about philosophy, and browsing Reddit.</p>
 							<p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, telepathy, or any other medium.</p>
 							<p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
 						</span>
@@ -781,6 +781,7 @@
 								<span class="portfolio-subtitle">Web App | February 2017</span>
 								<hr class="star-primary">
 								<img src="img/portfolio/jpg/bipartisan.jpg" class="img-responsive img-centered" alt="">
+								<p>Built at HopHacks 2017.</p>
 								<p>With the advent of "fake news" recently and the growth of increasingly biased media articles, my team and I set out to build something that would help citizens sift through the political landscape by getting only the most truthful news.</p>
 								<p>Bipartisan uses machine learning and natural language processing to identify the most credible articles by computing and assigning a 0-100 credibility rating. Users can also view a heatmap of the world and see the top news (arranged by topic) and most credible articles for those topics in any given location.</p>
 								<br />
