--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 										</a>
 									</li>
 									<li>
-										<a href="https://http://hophacks-bipartisan.herokuapp.com/"" target="_blank">
+										<a href="https://hophacks-bipartisan.herokuapp.com/"" target="_blank">
 											<img data-toggle="tooltip" title="App Demo" class="link-img" src="img/icons/link.png" />
 										</a>
 									</li>
