--- a/index.html
+++ b/index.html
@@ -353,13 +353,10 @@
 						<div class="footer-col col-md-3">
 						</div>
 						<div class="footer-col col-md-6">
-							<h3>Hit Me Up</h3>
+							<h3>Links</h3>
 							<ul class="list-inline">
 								<li>
-									<a data-toggle="tooltip" title="Facebook" target="_blank" href="https://facebook.com/rach.ag" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-								</li>
-								<li>
-									<a data-toggle="tooltip" title="Twitter" target="_blank" href="https://twitter.com/rachitag22" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+									<a data-toggle="tooltip" title="GitHub" target="_blank" href="https://github.com/rachitag22" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
 								</li>
 								<li>
 									<a data-toggle="tooltip" title="LinkedIn" target="_blank" href="https://linkedin.com/in/rachitagarwal22" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
