--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 									</li>
 									<li>
 										<a href="https://devpost.com/software/fireberry-pi" target="_blank">
-											<img data-toggle="tooltip-bottom" title="DevPost" class="link-img" src="img/icons/devpost.png" />
+											<img data-toggle="tooltip" title="DevPost" class="link-img" src="img/icons/devpost.png" />
 										</a>
 									</li>
 								</ul>
@@ -791,13 +791,13 @@
 										</a>
 									</li>
 									<li>
-										<a href="https://hophacks-bipartisan.herokuapp.com/"" target="_blank">
+										<a href="https://hophacks-bipartisan.herokuapp.com"" target="_blank">
 											<img data-toggle="tooltip" title="App Demo" class="link-img" src="img/icons/link.png" />
 										</a>
 									</li>
 									<li>
 										<a href="https://devpost.com/software/bipartisan" target="_blank">
-											<img data-toggle="tooltip-bottom" title="DevPost" class="link-img" src="img/icons/devpost.png" />
+											<img data-toggle="tooltip" title="DevPost" class="link-img" src="img/icons/devpost.png" />
 										</a>
 									</li>
 								</ul>
