--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 					<div class="col-lg-6 col-lg-offset-3">
 						<span class="about-content">
 							<p>Hey! I'm Rachit!</p>
-							<p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy designing and building things, reading, listening to podcasts and fresh beats, working out, and browsing Reddit.</p>
+							<p>I'm a freshman CS major at the University of Maryland, College Park. I enjoy designing and building things, reading, listening to podcasts and fresh beats, and working out.</p>
 							<p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, telepathy, or any other medium.</p>
 							<p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
 						</span>
