--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 									<span class="experience-period">
 										<i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;College Park, MD
 										<span>&nbsp;&nbsp;</span>
-										<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer 2016 / Winter 2017
+										<i class="fa fa-calendar-o" aria-hidden="true"></i>&nbsp;Summer &amp; Winter 2016
 									</span>
 								</span>
 								<br /><br />
