--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 						<br /><br />
 						<div class="row">
 							<div class="col-xs-3">
-								<a target="_blank" href="http://bookholders.com"><img class="experience-img" src="img/experience/jpg/bookholders.jpg" /></a>
+								<a target="_blank" href="http://www.bookholders.com"><img class="experience-img" src="img/experience/jpg/bookholders.jpg" /></a>
 							</div>
 							<div class="col-xs-9">
 								<span class="experience-header">
@@ -271,7 +271,7 @@
 						<br /><br />
 						<div class="row">
 							<div class="col-xs-3">
-								<a target="_blank" href="http://navsea.navy.mil"><img class="experience-img" src="img/experience/jpg/navsea.jpg"/></a>
+								<a target="_blank" href="http://www.navsea.navy.mil"><img class="experience-img" src="img/experience/jpg/navsea.jpg"/></a>
 							</div>
 							<div class="col-xs-9">
 								<span class="experience-header">
@@ -388,7 +388,6 @@
 			</div>
 		</section>
 
-		<!-- About Section -->
 		<section class="success" id="about">
 			<div class="container">
 				<div class="row">
@@ -396,19 +395,26 @@
 						<h2 class="h2-white">About</h2>
 						<hr class="light-hr">
 					</div>
-					<div class="col-lg-6 col-lg-offset-3">
-						<span class="about-content">
-							<p>Hey! I'm Rachit!</p>
-							<p>I'm a freshman CS major at the University of Maryland, College Park. My focus in general is using technology to make a meaningful social impact, to help people. I enjoy designing and building things, reading, listening to podcasts and fresh beats, and working out.</p>
-							<p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, telepathy, or any other medium.</p>
-							<p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
-						</span>
+					<div class="col-lg-8 col-lg-offset-2">
+						<div class="row">
+							<div class="col-xs-4">
+								<img class="experience-img" src="img/portrait/portrait.jpg"/>
+							</div>
+							<div class="col-xs-8">
+								<span class="about-content">
+									<p>Hey! I'm Rachit!</p>
+									<p>I'm a freshman CS major at the University of Maryland, College Park. My focus in general is using technology to make a meaningful social impact, to help people. I enjoy designing and building things, reading, listening to podcasts and fresh beats, and working out.</p>
+									<p>I look forward to the amazing work we can accomplish together. Feel free to contact me via phone, email, or any other medium.</p>
+									<p>Shout out to <a href="http://www.freepik.com" title="Freepik" style="color: #ecf0f1;" target="_blank">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon" style="color: #ecf0f1;" target="_blank">www.flaticon.com</a> (<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" style="color: #ecf0f1;">CC 3.0</a>)!</p>
+								</span>
+							</div>
+						</div>
+						<br /><br />
 					</div>
-					<br /><br />
-					<br /><br />
 				</div>
 			</div>
 		</section>
+
 		<!-- Footer -->
 		<footer class="text-center" id="#contact">
 			<div class="footer-above">
